<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sv_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout">

        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:src="@drawable/isla_loros"
            app:srcCompat="@drawable/isla_loros" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_cover_image"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:text="Nombre"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ubicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nombre"
                android:layout_centerHorizontal="true"
                android:text="Lugar de residencia"
                android:textColor="#fff"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ubicacion"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/rallies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Recorridos: "
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/rallyCounter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="0"
                    android:textColor="#ccc"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toRightOf="@+id/rallies" />

                <TextView
                    android:id="@+id/separator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text=" | "
                    android:textColor="#fff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rallies"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="Petrocoins: "
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/pointsCounter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="0"
                    android:textColor="#ccc"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toRightOf="@+id/points" />
            </LinearLayout>

        </RelativeLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:civ_border_width="3dp"
            app:civ_border_color="#FFFFFFFF"
            android:clickable="true"
            android:id="@+id/profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-130dp"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/com_facebook_profile_picture_blank_square" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/profile_layout"
            android:background="#fff"
            android:elevation="4dp"
            android:orientation="vertical"
            android:paddingBottom="5dp" >

            <SlidingTab.SlidingTabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:elevation="2dp"
                android:layout_gravity="top"
                android:background="@color/colorPrimaryDark"/>

            <android.support.v4.view.ViewPager
                android:id="@+id/pagerProfile"
                android:layout_width="match_parent"
                android:layout_height="300dp">

            </android.support.v4.view.ViewPager>


        </LinearLayout>
    </RelativeLayout>
</ScrollView>