<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FacebookFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:facebook="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:civ_border_width="3dp"
                app:civ_border_color="#CCCCCCCC"
                android:id="@+id/profilePicture"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/com_facebook_profile_picture_blank_square" />

            <TextView
                android:id="@+id/greeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                facebook:com_facebook_confirm_logout="true"
                facebook:com_facebook_login_text="@string/fb_log_in"
                facebook:com_facebook_logout_text="@string/fb_log_out"
                facebook:com_facebook_tooltip_mode="never_display" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_cont_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/btn_inicio_shape"
                android:text="CONTINUAR"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>