...
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
            >

            <Button
                android:id="@+id/btn_inicio"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/btn_inicio_shape"
                android:gravity="center"
                android:text="INICIAR"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"
                />

            <LinearLayout
...
